# rust-webserver

./: Cargo.toml  README.md
public/: index.html
public/css/: main.css
public/js/: main.js
src/: hello - Copy.rs  hello.rs  index.hbs  main.rs
