[package]

name = "heroku-rust-cargo-hello"
version = "1.0.0"
authors = ["me@example.com"]

[features]
unstable = []

[[bin]]
name = "hello"

[dependencies]
iron = "*"
url = "*"
valico = "*"
cookie = "*"
rustc-serialize = "0.3"

[dependencies.router]
git = "https://github.com/iron/router.git"

[dependencies.rustless]
git = "https://github.com/rustless/rustless"